Fix checkbox icon align

--- a/branding/css/spacewalk-fixes.less
+++ b/branding/css/spacewalk-fixes.less
@@ -16,3 +16,8 @@
 input[type="file"].form-control {
     height: 100%;
 }
+
+/* fix for checkbox icon alignment */
+div.checkbox.icon-wrapper i.fa {
+    width: .6em;
+}
